ShipTech10/app/css/custom.css
/* ... */
            .req-details-tabs {
                padding: 30px 0;
            }

            #prod_det .general_info_blade_card {
                display: none;
            }

            .small-card .totals {
                font-size: 1.6em;
            }

            .small-card .totals.grey-text {
                color: #95a5a6;
            }

            .small-card.bg-grey-steel {
                padding: 20px 20px 20px 10px;
                border-radius: 5px!important;
                border-left: 10px solid #F8F8F8;
                position: relative;
                background: #F8F8F8!important
            }

            .small-card.grey-border {
                border-color: #EAEAEA!important;
            }

            .small-card.orange-border {
                border-color: #F1AE3B!important;
            }

            .small-card.blue-border {
                border-color: #337ab7!important;
            }

            .small-card.green-border {
                border-color: #0c9f94!important;
            }

            .small-card .location-name {
                position: absolute;
                right: 10px;
                top: 10px;
            }

            .small-card p {
                margin: 2px 0;
            }

            .small-card {
                box-shadow: 1px 2px 2px #EAEAEA;
            }

            .mb {
                margin-bottom: 20px;
            }

            .energy_input_group {
                margin-top: 25px;
            }

            .energy_disabled {
                background: #f2f5f8;
                padding: 20px 0 10px 0;
                margin-bottom: 20px;
            }

            .energy_input_group {
                padding: 0 15px;
            }

            .energy_input_group span.input-group-addon {
                width: 40%!important
            }

            .collapsed .arrow, .collapsed .req-card {
                height: 130px;
            }

            .collapsed .arrow>button {
                font-size: 4em
            }

            .energy-content-cell {
                display: table-cell;
                min-width: 100px;
                max-width: 100px;
                border-right: 1px solid #e7ecf1;
                line-height: 25px;
                padding: 5px;
                vertical-align: middle;
                overflow: hidden;
                text-overflow: ellipsis;
            }

            .energy-content-cell.icon {
                min-width: 25px;
                max-width: 25px;
                border-right: none;
            }

            #grid_sealNumber {
                height: 300px!important
            }

            #grid_sealNumber .ui-grid-cell {
                height: 50px!important
            }

            #grid_sealNumber .ui-grid-cell .double-cells:first-child {
                /*height: 38px!important;*/
                border-bottom: 1px solid #e7ecf1
            }

            #grid_sealNumber .ui-grid-row:first-child .ui-grid-cell, #grid_sealNumber .ui-grid-row:nth-child(2) .ui-grid-cell {
                height: 100px!important
            }

            .cells_2 {
                height: 50px;
            }

            .ui-grid-cell-contents span.formatter[data-formatter-type="status"].amber, .jqgrid_component span.formatter[data-formatter-type="status"].amber {
                background: #FFC200;
                color: #FFFFFF;
            }

            .has_data .dataTables_empty {
                display: none;
            }

            .info_box {
                border: 0.5px solid #c1c3c7;
                margin: 10px 0 10px 0;
                border-left: 5px solid #c1c3c7;
                padding: 6px;
                box-shadow: 1px 2px 1px #b5b5b5;
                min-height: 190px;
            }

            .grey_portlet {
                background: #bdc3c7!important;
            }

            .float-left {
                float: left!important;
            }

            .overflowAuto {
                overflow: auto!important;
            }

            .extraSpacedTable {
                width: 160%!important;
                max-width: 99999px!important;
            }

            #offDetails .arrow, #offDetails .req-card {
                min-height: 140px;
            }

            table.requestEditWidth {
                width: 2px !important;
            }

            #all_requests_table_wrapper [data-column-name="requestEdit"] {
                width: 2px !important;
                max-width: 2px !important;
            }

            new-request .hideIt {
                display: none;
            }

            /* select[data-entries-select] option:last-child, .dataTables_length select option:last-child { */
            /*     display: none; */
            /* } */

            seller-card .extraSpacedTable, seller-card .portlet-body table#product_add_cost_table_1 {
                width: 250%!important
            }

            #group_of_requests_table .pkgSellerRow td {
                background: #5E738B;
                border-color: #7F93AB;
            }

            #group_of_requests_table .pkgSellerRow .mt-checkbox span {
                background: #FFF;
            }

            #group_of_requests_table .pkgBuyerRow {
                border: 5px solid #f3c200;
            }
            #group_of_requests_table tr.sellerHasRFQ {
			    background: #6ecc68 !important;
			}

			#group_of_requests_table .fakeHideColumn {
				max-width: 0px !important;
				overflow: hidden;
				padding: 0px !important;
				color: transparent;
			}
            confirm-order-dialog {
                top: 0!important;
                margin-top: 0!important;
            }
/* ... */

